packages/jsii/test/negatives/neg.method-name.1.ts
///!MATCH_ERROR: 'METHOD' must use camelCase (start with a lowercase letter)

export class MyClass {
    METHOD() {
        return "hi";
    }
}
